[gd_scene load_steps=6 format=3 uid="uid://cju206cf1ni5m"]

[ext_resource type="Script" path="res://logic/scenes/tools/mop.gd" id="1_qd35y"]
[ext_resource type="Script" path="res://logic/ambient_scripts/broom_glow.gd" id="2_0paim"]
[ext_resource type="PackedScene" uid="uid://c1dbokaan7wjk" path="res://modelos/psx_mop/mopAniText.glb" id="2_m7g18"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wmxb2"]
emission_enabled = true
emission = Color(0, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_0f5uk"]
size = Vector3(0.456604, 2.21809, 0.184814)

[node name="mop" type="Area3D" groups=["Trapero"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.741355, 0)
script = ExtResource("1_qd35y")

[node name="mopAniText" parent="." instance=ExtResource("2_m7g18")]
transform = Transform3D(1, 3.97047e-23, 0, -3.97047e-23, 1, 3.97047e-23, 0, -3.97047e-23, 1, 0, -0.754, 0)

[node name="CÃ­rculo_002" parent="mopAniText/Esqueleto_001/Skeleton3D" index="0"]
transform = Transform3D(0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0, 0, 0)
surface_material_override/2 = SubResource("StandardMaterial3D_wmxb2")
script = ExtResource("2_0paim")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0101624, 0.391269, 0.00671387)
shape = SubResource("BoxShape3D_0f5uk")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]

[editable path="mopAniText"]
